--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -103,7 +103,9 @@ body {
       .categories {
         margin-top: 30px;
       }
-      flex-direction: column-reverse;
+      & {
+        flex-direction: column-reverse;
+      }
     }
   }
 }
